--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,10 +1,15 @@
 {
+  "name": "ten-du-an-cua-ban",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -12,5 +17,8 @@
     "mysql2": "^3.11.0",
     "npm-watch": "^0.13.0",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
