--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-bootstrap": "^2.10.4",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
